Improve backup restore processing and diagnostics